--- a/styles/style.css
+++ b/styles/style.css
@@ -20,13 +20,13 @@ p, li {
 }
 
 html {
-  background-color: #e7eb13;
+  background-color: #56a642;
 }
 
 body {
   width: 600px;
   margin: 0 auto;
-  background-color: #e7eb13;
+  background-color: #56a642;
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 }
