--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ html {
 body {
   width: 600px;
   margin: 0 auto;
-  background-color: #56a642;
+  background-color: #185669;
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 }
