--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ body {
   margin: 0 auto;
   background-color: #2e9dbf;
   padding: 0 20px 20px 20px;
-  border: 5px solid black;
+  border: 5px white;
 }
 
 h1 {
